--- a/index.html
+++ b/index.html
@@ -15,20 +15,16 @@
         }
 
         #player {
-            width: 100%;
-            height: 100%;
-            display: block;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* 
-           To simulate the "crunchy" pixel look of 2004 on a 4K screen,
-           we can force nearest-neighbor interpolation if the SWF contains bitmaps.
-           For vectors, Ruffle handles the rendering.
-        */
-        canvas {
-            image-rendering: pixelated; 
-            image-rendering: -moz-crisp-edges;
-            image-rendering: crisp-edges;
+        ruffle-player {
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
@@ -39,12 +35,12 @@
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
         window.RufflePlayer.config = {
-            splashScreen: false,  // Absolutely no loading animation
+            splashScreen: false,
             autoplay: "on",
             unmuteOverlay: "hidden",
             backgroundColor: "#000000",
-            letterbox: "on",      // Fills screen, keeping aspect ratio (black bars if needed)
-            scale: "showAll",     // Ensures the content is visible within the viewport
+            letterbox: "on",
+            scale: "exactFit", // Force stretch to fill screen as requested
             forceScale: true,
         };
 
